exhibit.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Source+Code+Pro:wght@600&display=swap');

#nav-bar{
  position: fixed;
  top: 0;
  left:0;
  width: 100%;
  background: linear-gradient(180deg, rgba(88,88,88,100), rgba(88,88,88,0));
  /* margin: 0;
  padding: 0; */
}

#main{
  padding-top: 100px;
  height: 100vh !important;
  display: block;
}
.period-header{
  color: white;
  font-family: 'Montserrat', sans-serif;
  /* font-family: 'Source Code Pro', monospace; */
  text-align: center;
}

/* ---- grid ---- */
  
  .grid {
    margin:auto;
    /* max-width: 200px; */
    width: 100vw !important;
  }
  
  /* clearfix */
  .grid:after {
    content: '';
    display: block;
    clear: both;
  }
  
  /* ---- grid-item ---- */
  
  .painting > img{
    object-fit: scale-down;
    width:100%;
    height: 100%;
  }
  
  .grid-item {
    height:200px;
    max-width: 500px;
    float: left;
    /* vertical gutter */
    margin-bottom: 20px;
    /* background: #D26;
    border: 2px solid #333;
    border-color: hsla(0, 0%, 0%, 0.5);
    border-radius: 5px; */
  }
  
  .grid-item--width2 { width: 340px; }
  .grid-item--width3 { width: 520px; }
  .grid-item--width4 { width: 780px; }
  
  .grid-item--height2 { height: 200px; }
  .grid-item--height3 { height: 260px; }
  .grid-item--height4 { height: 360px; }
  
  
  
  
  .hidden{
    display: none;
  }
  
  
  /* modal stuff */
  
  .modal-img{
    max-height: 70vh;
    max-width: 70%;
    width: auto;
    height: auto;
  }
  
  .modal-close{
    position: absolute;
    top: 2px;
    right: 2px;
  }
  
  
  .modal-overlay{
    background-color: rgba(0,0,0,0.5);  ;
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }
  
  .modal-container{
  

    max-width: 80%;
    max-height: 90%;


    border-radius: 5px;
    text-align:center;
    
    background-color: white;
    
    margin:0;
    padding:0;
    padding-bottom: 17px;
    margin:auto;
  
    position: absolute;
    left: 50%;
    top: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
  }
  
  .modal-title{
    margin-left: 30px;
    margin-right: 30px;
    padding: 0;
  }

